--- a/templates/browse.html
+++ b/templates/browse.html
@@ -14,10 +14,16 @@
     <h2>Uploaded Files</h2>
     <ul>
       {% for file in files %}
-        <li><a href="{{ url_for('download', file_id=file.id) }}">{{ file.name }}</a></li>
+        <li><a href="{{ url_for('upload', file_id=file.id) }}">{{ file.name }}</a></li>
       {% endfor %}
     </ul>
   {% else %}
     <p>No files uploaded yet.</p>
+      <h2>Uploaded Files</h2>
+    <ul>
+      {% for file in files %}
+        <li><a href="{{ url_for('upload', file_id=file.id) }}">{{ file.name }}</a></li>
+      {% endfor %}
+    </ul>
   {% endif %}
 {% endblock %}
