--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,9 @@
         <li class="nav-item {% if request.path == '/' %}active{% endif %}">
           <a class="nav-link" href="{{ url_for('home') }}">Home</a>
         </li>
+        <li class="nav-item {% if request.path == '/upload' %}active{% endif %}">
+          <a class="nav-link" href="{{ url_for('upload') }}">upload</a>
+        </li>
         <li class="nav-item {% if request.path == '/browse' %}active{% endif %}">
           <a class="nav-link" href="{{ url_for('browse') }}">Browse</a>
         </li>
